--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,11 +1,11 @@
-@import "tailwindcss";
+/* @import "tailwindcss";
 
 :root {
   --background: #ffffff;
   --foreground: #171717;
-}
+} */
 
-@theme inline {
+/* @theme inline {
   --color-background: var(--background);
   --color-foreground: var(--foreground);
   --font-sans: var(--font-geist-sans);
@@ -23,4 +23,13 @@ body {
   background: var(--background);
   color: var(--foreground);
   font-family: Arial, Helvetica, sans-serif;
+} */
+
+body{
+  background-color: antiquewhite;
+}
+
+.number{
+  font-family: 'Courier New', Courier, monospace;
+  color: rgb(226, 16, 51);
 }
