--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,27 +1,39 @@
-/* @import "tailwindcss";
-
-:root {
-  --background: #ffffff;
-  --foreground: #171717;
-} */
-
-/* @theme inline {
-  --color-background: var(--background);
-  --color-foreground: var(--foreground);
-  --font-sans: var(--font-geist-sans);
-  --font-mono: var(--font-geist-mono);
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
-}
-
 body {
-  background: var(--background);
-  color: var(--foreground);
-  font-family: Arial, Helvetica, sans-serif;
-} */
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
 
+.header {
+  background-color: antiquewhite;
+  height: 100px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.header select{
+  height: 30px;
+  width: 200px;
+  border-radius: 10px;
+  background-color: burlywood;
+}
+
+.lab-content{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.lab-con{
+  display:flex;
+  justify-content: center;
+  flex-direction: column;
+  justify-items: center;
+  text-align: center;
+}
+
+.lab21-btn{
+  display: flex;
+  justify-content: space-between;
+}
